# Web_App

./: .commitlintrc.json  .gitignore  LICENSE.md  README.md
.github/workflows/: main.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile
