[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-rt = "^2.2.0"
uuid = { version = "^1.3.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.55.1"
aws-sdk-dynamodb = "^0.26.0"
env_logger = "^0.10.0"
log = "^0.4.14"
strum_macros = "^0.24.3"
strum = { version = "^0.24.0", features = ["derive"] }
derive_more = "^0.99.15"